2009-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-default.c: neutral avatar image

	* avatar.c (avt_credits):
	fix resetting the background color

2009-06-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	scan for g4 and monochrome in XPM data + further optimizations

2009-06-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm, avt_load_image_xpm_RW):
	better handling of XPM files with too few lines

	* avatar.c (avt_load_image_xpm):
	better handling of XPM files with too few columns

	* avatar.c (avt_load_image_xpm):
	do more error checking in XPM files

2009-06-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (load_image_initialize, load_image_done)
	(avt_import_XPM): don't use SDL_image for embedded XPM-data

	* avatar.c (avt_show_image_file, avt_show_image_data)
	(avt_import_image_data, avt_import_image_file):
	always try to use the internal XPM-loader first

2009-06-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	improved support for color names in XPM (only one word names)

2009-06-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_name_to_color): support X11 color names
	avtcolors.h: new file

2009-06-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_background_color_name)
	(avt_set_text_color_name)
	(avt_set_text_background_color_name): new functions
	(avt_name_to_color): new function
	(avt_load_image_xpm): adapted

	* avatarsay.c (handle_backgroundcolor_command)
	(check_config_file): use avt_set_background_color_name

	* avatar.c (avt_draw_balloon): fix calculation of shadow color

2009-06-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	organize XPM code characters in a tree
	(avt_free_xpm_tree): new function

2009-05-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm_RW):
	improve memory handling a further
